--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "wow",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://www.hacpool.com",
   "dependencies": {
     "@material-tailwind/react": "^2.0.6",
     "@testing-library/jest-dom": "^5.17.0",
