--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6"
   },
   "scripts": {
     "start": "nodemon server.js",
